# scribe

./: .gitignore  =4.0.0  README.md  install.sh  pyproject.toml
scribe/: __init__.py  cli.py  comparator.py  diarizer.py  error_reporter.py  proofer.py  separator.py  transcriber.py  ui.py
scribe/exporters/: __init__.py  docx_exporter.py  json_exporter.py  srt_exporter.py  txt_exporter.py
